<resources>
    <string name="app_name">FÜTAG</string>

    <!-- General Stringler -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="futag_icon">futag ikon</string>
    <string name="futag_text">futag yazi</string>

    <string name="entrepreneurship_unit">Girişimcilik ve İnovasyon Birimi</string>
    <string name="social_responsibility_unit">Sosyal Sorumluluk ve Faaliyet Birimi</string>
    <string name="project_rd_unit">Proje ve AR-GE Birimi</string>
    <string name="software_unit">Yazılım Birimi</string>
    <string name="media_unit">Medya ve Tasarım Birimi</string>
    <string name="foreign_relations_unit">Dış İlişkiler Ve Organizasyon</string>

    <string name="blog">Blog</string>
    <string name="events">Etkinlikler</string>
    <string name="profile">Profil</string>
    <string name="moreover">Dahası</string>
    <string name="next">İleri</string>
    <string name="finish">Bitir</string>
    <string name="main_screen">Ana Sayfa</string>
    <string name="bir_kulupten_daha_fazlasi">#BIRKULUPTENDAHAFAZLASI</string>
    <string name="fill_in_the_blanks">Lütfen boşlukları doldurunuz!</string>
    <string name="select_picture">Lütfen bir resim seçiniz!</string>
    <string name="log_in">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="sign_out">Çıkış Yap</string>
    <string name="edit_profile">Profili Düzenle</string>
    <string name="save_changes">Değişiklikleri Kaydet</string>
    <string name="send">Gönder</string>
    <string name="error_message">Hata, lütfen tekrar deneyiniz.</string>
    <string name="edit_mark">duzenleme isareti</string>
    <string name="very_soon">Çok Yakında!</string>
    <string name="image">Resim</string>
    <string name="link_not_reached">Linke Ulaşılamadı.</string>
    <string name="click_for_registration">Kayıt için tıklayınız.</string>
    <string name="try_again_later">Daha Sonra Tekrar Deneyiniz.</string>
    <string name="change_password">Şifreyi Değiştir</string>
    <string name="change_password_description_text">Lütfen yeni şifrenizi giriniz.</string>
    <string name="password_changed">Şifre Değişti, Lütfen Tekrar Giriş Yapın.</string>

    <!-- Main Activity -->
    <string name="no_internet_connection">İnternet Bağlantınızın Olduğundan Emin Olun!</string>

    <!-- Flow Activity -->

    <!-- FirstScreen Fragment -->
    <string name="welcome_to_futag_world">Dünyasına Hoş Geldiniz</string>

    <!-- SecondScreen Fragment -->
    <string name="if_you_want_read_blog_posts">İster Blog Yazılarını Oku İstersen Etkinliklere Tek Tıkla Kayıt Ol</string>

    <!-- ThirdScreen Fragment -->
    <string name="come_join_us">Haydi Sen De Bize Katıl</string>

    <!-- Splash Fragment -->

    <!-- LoginRegister Fragment -->
    <string name="intro_text">"Başarı, zaman içerisinde çok çalışmaya ve tutkuya bağlıdır. Eğer gerçekten çok çalışırsanız, uzun bir süre boyunca gerçekten çok çalışırsanız, karşılığını alacaksınız."</string>
    <string name="circuit_view">Futag Devre</string>

    <!-- Register Fragment -->
    <string name="add_details_for_sign_up">Kaydolmak için bilgilerinizi ekleyin</string>
    <string name="name">Adınız</string>
    <string name="surname">Soyadınız</string>
    <string name="email">E-Mail</string>
    <string name="password">Şifre</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="new_password_again">Yeni Şifre (Tekrar)</string>
    <string name="again_password">Şifre (Tekrar)</string>
    <string name="password_must_match">Şifreler Aynı Olmalıdır!</string>
    <string name="your_birthday">Doğum Gününüz</string>
    <string name="already_have_account">Zaten hesabın var mı?</string>
    <string name="welcome">Hoş Geldin</string>

    <!-- Login Fragment -->
    <string name="login_information">Giriş yapmak için bilgilerinizi giriniz</string>
    <string name="forgot_password">Şifreni mi unuttun?</string>
    <string name="dont_have_account">Hesabın yok mu?</string>

    <!-- ForgotPassword Fragment -->
    <string name="please_enter_your_email_adress">Lütfen E-Mail Adresinizi Girin!</string>
    <string name="please_enter_different_password">Eski ve Yeni Şifre Aynı Olamaz!</string>
    <string name="confirmation_email_sent">Onay Maili Gönderildi.</string>
    <string name="i_forgot_my_password">Şifremi Unuttum</string>
    <string name="password_reset_text">Şifrenizi yenilemek için lütfen e-posta adresinizi giriniz.</string>
    <string name="changes_saved">Değişiklikler Kaydedildi</string>

    <!-- More Fragment -->
    <string name="more">Daha Fazlası</string>
    <string name="our_units">Birimlerimiz</string>
    <string name="rate_us">Bizi Oyla</string>
    <string name="notification">Bildirimler</string>
    <string name="feedback">Geri Bildirim</string>
    <string name="about_us">Hakkımızda</string>
    <string name="moreover_circle_image">Dahası Yuvarlak Resim</string>
    <string name="copyright">Copyright © 2021 by Adem Atici</string>

    <!-- About Us Fragment -->
    <string name="about_us_text">Elazığ Fırat Üniversitesi Teknoloji Ar-Ge Girişimcilik Öğrenci
        Topluluğu(FÜTAG), 2009 yılında Fırat Üniversitesinde öğrencilere mühendislik ve
        yönetim ilkelerini öğretmek ve uygulamak amacıyla kurulmuştur. Çeşitli projeler ve
        etkinliklerle öğrencileri iş hayatına hazırlamak ve kendi potansiyellerinin farkına
        varmalarını sağlamak için elinden geleni yapmaya devam etmektedir.</string>

    <!-- Our Unit Fragment -->
    <string name="entrepreneurship_unit_text">\t\tBirim olarak amacımız düzenleyeceğimiz
        etkinlik ve eğitimlerle üyelerimizin iletişim yeteneklerini geliştirerek takım çalışması
        yöntemi ile yeni ürün ve fikir oluşturmalarına destek olmaktır.\n\n\t\tFikirlerin uygulama
        ve pratik ile gerçek değerlerine ulaştıkları bilincindeyiz.Girişimcilik ve İnovasyon birimi
        olarak, ekip arkadaşlarımızın girişimcilik ekosistemine dahil olmalarını sağlamak amacıyla
        fikirlerini destekleyerek üretme aşamalarına getirmelerini hedeflemekteyiz.</string>
    <string name="media_unit_text">\t\tBirimimizin amacı; topluluğumuzun ihtiyaç duyduğu
        reklam çalışmalarını yürütmek ve tanıtımımıza katkı sağlamaktır. Topluluğumuz tanıtımının
        yanı sıra sosyal medya yöneticiliği ve fotoğrafçılık alanında çalışmalar yürütmekteyiz.\n\n
        \t\tBirim olarak, ileriki dönemlerde topluluğumuzun sosyal medyadaki tanıtımlarını
        arttırarak hedef kitlemizi büyütmeyi amaçlamaktayız.</string>
    <string name="software_unit_text">\t\tBirim olarak amacımız topluluğumuzun yazılım konusunda
        ihtiyacı olan ürünlerin tasarım ve mimarisini yapmaktır. Ortaya çıkarılan ürünlerin dışında 
        ekip arkadaşlarımıza dışarıdan sağlanan uzman desteği ile çeşitli eğitimler düzenlenmektedir.
        \n\n\t\tDijital dönüşüm sürecine uyum sağlamanın önemini bilerek, çalışmaya devam ediyor ve
        her yeni dönemde inovatif ürünler ortaya koymayı hedefliyoruz.</string>
    <string name="social_responsibility_unit_text">\t\tBirim olarak: Etrafımızda bulunan çocuk,
        genç ve yaşlı her bir bireyin daha mutlu ve huzurlu bir hayat geçirmesi için çalışıyoruz.
        Aynı doğayı paylaştığımız bütün canlılara daha güvenilir bir yaşam alanı sağlamak hepimizin
        insanlık görevidir.\n\n\t\tBizler hep beraber çevremizi ve geleceğimizi daha güzel, mutlu ve
        huzurlu yapmayı hedeflemekteyiz.</string>
    <string name="project_rd_unit_text">\t\tBirim olarak amacımız üretmeye ve geliştirmeye hevesli
        ekip arkadaşlarımızla birlikte projeler tasarlayıp bu projeleri istenilen alanda
        desteklemektir.\n\n\t\tİster teknik ister sosyal projeler olsun gelişmekte olan teknolojiye
        ve sosyal dünyaya uyum sağlamak, bu projeleri geliştirirken aynı zamanda bireysel
        yeteneklerimizi de geliştirmek öncelikli hedeflerimizdir.</string>
    <string name="foreign_relations_unit_text">\t\tBirimimizin amacı; ulusal ve uluslararası
        kuruluşlar için üniversite temsilciliğini üstlenmek ve düzenlediğimiz etkinlikler için
        yetkili kişiler ile iletişime geçmektir. Topluluğumuz adına dışarıyla bağlantı sağlamamızın
        yanı sıra, sponsorluk ve reklam konularında da çalışmalar yürütmekteyiz.\n\n\t\tBirim olarak,
        ileriki dönemlerde topluluğumuzu ülkemizin önde gelen toplulukları ile aynı kategoride
        görmek ve üniversitemizi en güzel şekilde temsil etmeyi sağlamayı hedeflemekteyiz.</string>
    <string name="kvkk_text">FÜTAG\n\n KİŞİSEL VERİLERİN KORUNMASI KANUNU KAPSAMINDA AÇIK RIZA BEYANI\n\n
        FÜTAG tarafından, 6698 Sayılı Kişisel Verilerin Korunması Kanunu’nun (“KVK Kanunu”) ilgili hükümlerine uygun olarak bilginize sunulan Kişisel Verilerin Korunması Kanunu Kapsamında ;\n\n
        Kişisel verilerinin veri sorumlusu sıfatıyla FÜTAG veya gerekli güvenlik tedbirlerini aldırmak suretiyle yetkilendirdiği veri işleyenler tarafından; FÜTAG’ın kullanıcılarına sunmuş olduğu ürün ve hizmetlerini en iyi koşullar altında sağlayabilmesi, ürün veya hizmetlerin güvenilir ve kesintisiz bir şekilde temin edilmesi, kullanıcı memnuniyetinin en üst seviyeye çıkarılması,  farklı ürün ve hizmetlerin tanıtım, pazarlama, reklam ve kampanya faaliyetlerinin yapılması, kullanıcıların etkinliklerden , blog yazılarından ve gelişmelerden haberdar edilmesi amaçlarıyla doğrudan veya dolaylı olarak ilgili olan kişisel verilerin; başta mevzuatta öngörülen veya işlendikleri amaç için gerekli olan süre kadar muhafaza edilme ilkesi olmak üzere 6698 Sayılı Kişisel Verilerin Korunması Kanunu’nun (“KVK Kanunu”) 4. maddesinde ifade edilen genel ilkelere uygun şekilde işlenebileceğini; elde edilebileceğini, kaydedilebileceğini, işlenme amacıyla uygun süre zarfında fiziksel veya elektronik ortamda güvenli bir şekilde depolanabileceğini, muhafaza edilebileceğini, değiştirilebileceğini, yeniden düzenlenebileceğini, mevzuata uygun biçimde açıklanabileceğini ve aktarılabileceğini, devralınabileceğini, sınıflandırılabileceğini, işlenebileceğini ya da verilerin kullanılmasının engellenebileceğini; yukarıda belirtilen hususlarla ilgili olarak FÜTAG tarafından bilgilendirildiğimi ve KVK Kanunu çerçevesinde açık rızam bulunduğunu kabul ve beyan ederim.\n\n
        Ayrıca, FÜTAG ile paylaşmış olduğum kişisel verilerin doğru ve güncel olduğunu; işbu bilgilerde değişiklik olması halinde değişiklikleri FÜTAG’a bildireceğimi kabul ve beyan ederim.\n\n
        KVK Kanunu’nda tanımlanan özel nitelikli kişisel verilerim de dahil olmak üzere ilgili kişisel verilerimin işlenmesine, ilgili süreç kapsamında işlenme amacı ile sınırlı olmak üzere kullanılmasına ve paylaşılmasına, gereken süre zarfında saklanmasına açık rızam olduğunu ve bu hususta tarafıma gerekli aydınlatmanın yapıldığını; işbu metni, FÜTAG Kişisel Verilerin Korunması ve İşlenmesi Yönetmeliğini ve Aydınlatma Metnini okuduğumu ve anladığımı kabul ederim.\n\n
    </string>
    <string name="settings">Ayarlar</string>
    <string name="dark_mode">Koyu Mod</string>
    <string name="gallery_permission">Galeriye gitmek için izin lazım!</string>
    <string name="give_permission">İzni ver.</string>
    <string name="kvkk_text_accept">Açık Rıza Metnini</string>
    <string name="you_accept">kabul etmiş olursunuz.</string>
    <string name="delete_my_account">Hesabımı Sil</string>
    <string name="delete_account_confirm">Hesabınızı silmek istediğinizden emin misiniz?</string>
    <string name="no">Hayır</string>
    <string name="yes">Evet</string>
    <string name="deletion_success">Hesap Silme Başarılı</string>
    <string name="no_notification">Bildirim Yok.</string>
    <string name="registration_is_closed">Kayıtlar Kapalı.</string>
    <string name="enter_password_confirm_process">Şifrenizi giriniz</string>
    <string name="confirm">Onayla</string>
    <string name="notification_channel_id">NOTIFICATION_CHANNEL_ID</string>

</resources>