<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background_color_light_black"
    tools:context=".view.fragment.login.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/register"
                android:textColor="@color/text_color_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/add_details_for_sign_up"
                android:textAlignment="center"
                android:textColor="@color/hint_color"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewCircleImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/person_high_resolution"
                app:civ_border_color="@color/yellow"
                app:civ_border_width="2dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextSurname"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:drawableStart="@drawable/password_image"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextAgainPassword"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:drawableStart="@drawable/password_image"
                android:drawablePadding="10dp"
                android:hint="@string/again_password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editTextBirthday"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                app:backgroundTint="@color/edit_text_background_color"
                app:icon="@drawable/birthday_image"
                app:iconTint="@color/menu_gray"
                app:iconPadding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:textAlignment="textStart"
                android:singleLine="true"
                android:fontFamily="serif"
                android:hint="@string/your_birthday"
                android:textAllCaps="false"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewKvkkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kvkk_text_accept"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_yellow"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewKvkkTextAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/you_accept"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_dark"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="330dp"
                android:layout_height="52dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/register_button_background"
                android:backgroundTint="@color/button_background_yellow"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/text_color_dark"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textAlignment="center"
                    android:textColor="@color/hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/log_in"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_yellow"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="ziplayanarianimation.json"
            app:lottie_loop="true"
            app:lottie_speed="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>