<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background_color_light_black"
    tools:context=".view.fragment.flow.profile.UpdatePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="ziplayanarianimation.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewChangeMyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/change_password"
                android:textColor="@color/text_color_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/change_password_description_text"
                android:textAlignment="center"
                android:textColor="@color/hint_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextOldPassword"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password_image"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password_image"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNewPasswordAgain"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:autofillHints="false"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/password_image"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_text_color_black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonChangePassword"
                android:layout_width="330dp"
                android:layout_height="52dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/register_button_background"
                android:backgroundTint="@color/button_background_yellow"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/text_color_dark"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/futag_icon"
                android:src="@drawable/futag_image_abstract" />

            <TextView
                android:id="@+id/textViewBirKuluptenDahaFazlasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/bir_kulupten_daha_fazlasi"
                android:textColor="@color/text_color_dark"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>