<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragment.akis.dahasi.HakkimizdaF">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/about_us"
            android:textColor="@color/text_color_koyu"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewItemMark"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ok_saga_dogru"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewClubImage" />

        <TextView
            android:id="@+id/textViewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:text="@string/about_us_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewItemMark"
            app:layout_constraintTop_toTopOf="@+id/imageViewItemMark" />

        <ImageView
            android:id="@+id/imageViewClubImage"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/futag_genel"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>